--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,12 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 	<script src="popup.js" type="text/javascript"></script>
 </head>
 <body>
-	<div>Get Cookie</div>
+	<button id='twitch-login'>Twitch 로 로그인</button>
+	<div id='twitch-info'>로그인 정보가 없습니다</div>
+	<input type='text' id='heroku-url' name='heroku-url' required disabled />
+	<button id='heroku-url-submit' disabled>전송</button>
 </body>
 </html>
