--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 <body>
 	<button id='twitch-login'>Twitch 로 로그인</button>
 	<div id='twitch-info'>로그인 정보가 없습니다</div>
-	<input type='text' id='heroku-url' name='heroku-url' value="http://localhost:8000/" required disabled />
+	<input type='text' id='heroku-url' name='heroku-url' value="http://localhost:8080/cookies" required disabled />
 	<button id='heroku-url-submit' disabled>전송</button>
 </body>
 </html>
